# MyInterObjCom-PlayKata-githubCopilot-autoModel-libIOC-inC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_BuildRunTest.md  README_DetailDesign.md  README_StateDesign.md  README_UserGuide.md  README_UserStories.md  README_VerifyDesign.md
.catdd/: CaTDD_INSTALL.md
.catdd/methodPrompts/: CaTDD_designAndImplTemplate.cxx  CaTDD_designAndImplTemplate.ts  CaTDD_methodPrompt.md  CaTDD_methodPrompt4Cat-Capability.md  CaTDD_methodPrompt4Cat-Compatibility.md  CaTDD_methodPrompt4Cat-Concurrency.md  CaTDD_methodPrompt4Cat-Configuration.md  CaTDD_methodPrompt4Cat-DemoExample.md  CaTDD_methodPrompt4Cat-Edge.md  CaTDD_methodPrompt4Cat-Fault.md  CaTDD_methodPrompt4Cat-Misuse.md  CaTDD_methodPrompt4Cat-Performance.md  CaTDD_methodPrompt4Cat-Robust.md  CaTDD_methodPrompt4Cat-State.md  CaTDD_methodPrompt4Cat-Typical.md  README.md  README_UserGuide.md  README_UserGuide_ZH.md  README_ZH.md
.catdd/slashCommands/: README.md  README_UserGuide.md  README_UserGuide_ZH.md  README_ZH.md  SPEC_slashCommandTemplate.md  UT_slashCommandTemplate.md
.catdd/slashCommands/commands/: README.md
.catdd/slashCommands/commands/P0-FuncTestsFlow/: UT_convertDemoToTypical.md  UT_designEdgeSkeleton.md  UT_designFaultSkeleton.md  UT_designFuncTestsSkeleton.md  UT_designMisuseSkeleton.md  UT_designTypicalSkeleton.md  UT_implTestCase.md  UT_reviewFuncTestsSkeleton.md  UT_reviewImplTestCase.md  UT_tellMeNextImplTest.md
.catdd/slashCommands/commands/P1-DesignTestsFlow/: UT_designCapabilitySkeleton.md  UT_designConcurrencySkeleton.md  UT_designStateSkeleton.md  UT_reviewDesignTestsSkeleton.md
.catdd/slashCommands/commands/P2-QualityTestsFlow/: UT_designCompatibilitySkeleton.md  (+4 more)
.catdd/slashCommands/flows/: P0-FuncTestsFlow.md  P1-DesignTestsFlow.md  P2-QualityTestsFlow.md  Px-SpecFlow.md  Px-SpecFlow_ZH.md  README.md
.catdd/slashCommands/templates/: README_ArchDesignTemplate.md  README_CompatDesignTemplate.md  README_DetailDesignTemplate.md  README_DiagnosisDesignTemplate.md  README_ErrorDesignTemplate.md  README_PerfDesignTemplate.md  README_ResourceDesignTemplate.md  README_StateDesignTemplate.md  README_Template.md  README_UsageDesignTemplate.md  README_UserGuideTemplate.md  README_UserStoriesTemplate.md  README_VerifyDesignTemplate.md  SpecTodoUserStoryTemplate.md
.catdd/spec/: patchBackDryRun-20260623.md  projectContext.md
.catdd/spec/analyzedNews/: 20260617-EstablishedLink-Feature.md
.catdd/spec/doingUS/: 20260618-EstablishedLink-UserStory.md  20260618-TASKs.md
.catdd/spec/pendingNews/: 20260624-reArchDesign-Issue.md
.catdd/spec/todoUS/: 20260618-EstablishedLink-UserStory.md  20260621-EstablishedLink-ConcurrencyDesignStory.md
.github/instructions/: catdd.instructions.md
.github/prompts/: SPEC_abortUserStory.prompt.md  SPEC_analyzeAbortedUserStory.prompt.md  SPEC_analyzeFeature.prompt.md  SPEC_analyzeIssue.prompt.md  SPEC_analyzeUserStory.prompt.md  SPEC_clearStoryIntent.prompt.md  SPEC_closeUserStory.prompt.md  SPEC_commitWorks.prompt.md  SPEC_designUnitTests.prompt.md  SPEC_implProductCodes.prompt.md  SPEC_implUnitTests.prompt.md  SPEC_importFeature.prompt.md  SPEC_importIssue.prompt.md  SPEC_importUserStory.prompt.md  SPEC_initProjectContext.prompt.md  SPEC_makePlan.prompt.md  SPEC_openUserStory.prompt.md  SPEC_patchOriginalCaTDD.prompt.md  SPEC_resumeUserStory.prompt.md  SPEC_reviewArchDesign.prompt.md  SPEC_reviewDetailDesign.prompt.md  SPEC_reviewProductCodes.prompt.md  SPEC_reviewUserStory.prompt.md  SPEC_suspendUserStory.prompt.md  SPEC_takeArchDesign.prompt.md  SPEC_takeDetailDesign.prompt.md  SPEC_updateArchDesign.prompt.md  SPEC_updateDetailDesign.prompt.md  SPEC_updateProjectContext.prompt.md  SPEC_updateUserStory.prompt.md  SPEC_whatsNextTask.prompt.md  UT_convertDemoToTypical.prompt.md  UT_designCapabilitySkeleton.prompt.md  UT_designCompatibilitySkeleton.prompt.md  UT_designConcurrencySkeleton.prompt.md  UT_designConfigurationSkeleton.prompt.md  UT_designEdgeSkeleton.prompt.md  UT_designFaultSkeleton.prompt.md  UT_designFuncTestsSkeleton.prompt.md  UT_designMisuseSkeleton.prompt.md  (+10 more)
Doc/: IOC_UsageScenarios.md
Include/IOC/: IOC_SrvAPI.h
Source/: IOC_SrvAPI.c
Test/: CMakeLists.txt  UT_US1_Service_Capability.cxx  UT_US1_Service_Edge.cxx  UT_US1_Service_Fault.cxx  UT_US1_Service_Misuse.cxx  UT_US1_Service_State.cxx  UT_US1_Service_Typical.cxx
scripts/: updateCaTDD4Copilot.sh
(+32 files in other folders)
