cmake_minimum_required(VERSION 3.16)

project(MyInterObjComBase LANGUAGES C CXX)

if(NOT CMAKE_C_COMPILER AND NOT CMAKE_CXX_COMPILER)
    if(APPLE)
        if(EXISTS "/opt/homebrew/opt/llvm/bin/clang")
            set(CMAKE_C_COMPILER /opt/homebrew/opt/llvm/bin/clang)
            set(CMAKE_CXX_COMPILER /opt/homebrew/opt/llvm/bin/clang++)
        elseif(EXISTS "/usr/local/opt/llvm/bin/clang")
            set(CMAKE_C_COMPILER /usr/local/opt/llvm/bin/clang)
            set(CMAKE_CXX_COMPILER /usr/local/opt/llvm/bin/clang++)
        else()
            set(CMAKE_C_COMPILER clang)
            set(CMAKE_CXX_COMPILER clang++)
        endif()
    else()
        set(CMAKE_C_COMPILER gcc)
        set(CMAKE_CXX_COMPILER g++)
    endif()
endif()

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_VERBOSE_MAKEFILE ON)

if(APPLE)
    add_compile_options(-Wno-availability)
endif()

option(CONFIG_BUILD_UNIT_TESTING "Build unit test" ON)

if(CMAKE_BUILD_TYPE STREQUAL "DiagASAN")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -fsanitize=address -fno-omit-frame-pointer -Wno-deprecated-declarations")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_C_FLAGS}")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address")
elseif(CMAKE_BUILD_TYPE STREQUAL "DiagTSAN")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -fsanitize=thread -fno-omit-frame-pointer")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fsanitize=thread -fno-omit-frame-pointer")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=thread")
elseif(CMAKE_BUILD_TYPE STREQUAL "DiagUBSAN")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -fsanitize=undefined -fno-omit-frame-pointer")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fsanitize=undefined -fno-omit-frame-pointer")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=undefined")
elseif(CMAKE_BUILD_TYPE STREQUAL "DiagMSAN")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -fsanitize=memory -fno-omit-frame-pointer")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fsanitize=memory -fno-omit-frame-pointer")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=memory")
elseif(CMAKE_BUILD_TYPE STREQUAL "DiagLSAN")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -fsanitize=leak -fno-omit-frame-pointer")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fsanitize=leak -fno-omit-frame-pointer")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=leak")
endif()

set(PROJECT_LIB ${PROJECT_NAME})
file(GLOB PROJECT_SRCFILES Source/*.c)
if(PROJECT_SRCFILES)
    add_library(${PROJECT_LIB} STATIC ${PROJECT_SRCFILES})
else()
    add_library(${PROJECT_LIB} INTERFACE)
endif()

target_include_directories(${PROJECT_LIB} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/Include)

if(CONFIG_BUILD_UNIT_TESTING)
    enable_testing()

    find_package(GTest QUIET)
    if(NOT GTest_FOUND)
        include(FetchContent)
        FetchContent_Declare(
            googletest
            URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
        )
        set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
        FetchContent_MakeAvailable(googletest)
    endif()

    function(UT_addEachCXX_asTestExe)
        file(GLOB UT_CXX_FILES *.cxx)
        foreach(UT_CXX_FILE ${UT_CXX_FILES})
            get_filename_component(UT_EXE_NAME ${UT_CXX_FILE} NAME_WE)
            add_executable(${UT_EXE_NAME} ${UT_CXX_FILE})
            target_compile_definitions(${UT_EXE_NAME} PRIVATE CONFIG_BUILD_WITH_UNIT_TESTING)
            target_compile_features(${UT_EXE_NAME} PRIVATE cxx_std_17)

            if(TARGET GTest::gtest AND TARGET GTest::gtest_main)
                target_link_libraries(${UT_EXE_NAME} PRIVATE ${PROJECT_LIB} GTest::gtest GTest::gtest_main)
            elseif(TARGET gtest AND TARGET gtest_main)
                target_link_libraries(${UT_EXE_NAME} PRIVATE ${PROJECT_LIB} gtest gtest_main)
            else()
                message(FATAL_ERROR "GoogleTest target not found after dependency resolution")
            endif()

            add_test(NAME ${UT_EXE_NAME} COMMAND ${UT_EXE_NAME})
        endforeach()
    endfunction()

    target_compile_definitions(${PROJECT_LIB} INTERFACE CONFIG_BUILD_WITH_UNIT_TESTING)
    add_subdirectory(Test)
endif()
